# mujoco_RGBD

./: CMakeLists.txt  MUJOCO_LOG.TXT  README.md
data/: camera_test.xml
include/: mujoco_rgbd_camera.hpp
src/: camera.cpp  mujoco_rgbd_camera.cpp  two_window.cpp
